# EARLY

./: .dockerignore  .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-base.txt  requirements-dev.txt  requirements.txt
agents/: __init__.py  critic_agent.py  forensic_agent.py  orchestrator.py  prompts.py  sentiment_auditor.py  states.py
api/: Dockerfile  db.py  main.py  rate_limit.py  requirements.txt  schemas.py
docs/: agents.md  case-study.md  data-pipeline.md  ea_exit_validation.csv  ml-model.md  mlops.md  premises.md  scorecard.md  signals-limitations.md  technical.md
frontend/: Dockerfile  app.py  requirements.txt
models/: drift_reference_v1.3.json  drift_reference_v1.4.json  drift_reference_v1.5.json  optuna_best_params_v1.1.json  optuna_best_params_v1.2.json  optuna_best_params_v1.3.json  optuna_best_params_v1.4.json  optuna_best_params_v1.5.json  pred_distribution_v1.3.json  pred_distribution_v1.4.json  pred_distribution_v1.5.json  scorecard_stats_v1.0.json  scorecard_stats_v1.1.json  shap_top25_v1.3.json  shap_top25_v1.4.json  shap_top25_v1.5.json  shap_v1.0.pkl  shap_v1.1.pkl  shap_v1.2.pkl  shap_v1.3.pkl  shap_v1.4.pkl  shap_v1.5.pkl  xgb_v1.0.json  xgb_v1.0_features.json  xgb_v1.1.json  xgb_v1.1_features.json  xgb_v1.2.json  xgb_v1.2_features.json  xgb_v1.3.json  xgb_v1.3_features.json  xgb_v1.4.json  xgb_v1.4_features.json  xgb_v1.5.json  xgb_v1.5_features.json
scripts/: wake_app.py
tests/: run_tests.py
training/: monitor_drift.py  promote_model.py  retrain.py  scorecard.py  (+4 more)
(+38 files in other folders)
