[project]
name = "early-system"
version = "1.0.0"
description = "Steam Early Access Intelligence System"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }                    
authors = [{ name = "Fox Yiu" }]            
keywords = ["steam", "early-access", "predictive-modeling", "fastapi", "streamlit"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]          
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]                           
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]                     
testpaths = ["tests"]
asyncio_mode = "auto"